# koompi-appstore

./: .gitignore  Cargo.toml
pi-deriver-discover/src/: main.rs  xml.rs
pi-deriver-pacman/src/: main.rs
pi-deriver-pacman/src/helpers/: file.rs
pi-deriver-pacman/src/interfaces/: desc.rs  store.rs
pi-library/: Cargo.toml
pi-library/src/utils/: file.rs
pi-package-builder/: Cargo.toml
pi-package-builder/src/: main.rs
pi-web-backend/: Cargo.toml  start.sh
pi-web-backend/src/: graphql.rs  graphql.rs.bk  interface.rs  main.rs  xml.rs
