[package]
name = "pi-package-builder"
version = "0.1.0"
authors = ["mrrbrilliant <mrrbrilliantwork@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
tar = "0.4.29"
zstd = "*"
colored = "2.0"
