[package]
name = "pi-web-backend"
version = "0.1.0"
authors = ["BrilliantPhal <phalbrilliant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pi-library = { path = "../pi-library" }
async-graphql-actix-web = "1.17.3"
actix-cors = "0.2.0"
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-web-actors = "2.0.0"
async-graphql = "1.16"
slab = "0.4.2"
listenfd = "0.3.3"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
strum = "0.19.2"
strum_macros = "0.19.2"
tokio = { version = "0.2", features = ["time", "stream"] }
futures = "0.3.0"

# actix-web = "2.0.0"
# actix-rt = "1.1.1"
# listenfd = "0.3.3"
# dotenv = "0.15.0"
# serde = "1.0.114"
# serde_derive = "1.0.114"
# serde_json = "1.0.57"
# async-graphql = "1.17"
